--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ captures
 .cxx
 local.properties
 xcuserdata
+androidApp/google-services.json
+androidApp/src/main/res/values/secrets.xml
+androidApp/upload-keystore.jks
+keystore.properties
